@@ -411,13 +411,21 @@ public class FloatDict {
 
   public String minKey() {
     checkMinMax("minKey");
-    return keys[minIndex()];
+    int index = minIndex();
+    if (index == -1) {
+      return null;
+    }
+    return keys[index];
   }
 
 
   public float minValue() {
     checkMinMax("minValue");
-    return values[minIndex()];
+    int index = minIndex();
+    if (index == -1) {
+      return Float.NaN;
+    }
+    return values[index];
   }
 
 
@@ -452,17 +460,25 @@ public class FloatDict {
   }
 
 
-  /** The key for a max value. */
+  /** The key for a max value, or null if everything is NaN (no max). */
   public String maxKey() {
     checkMinMax("maxKey");
-    return keys[maxIndex()];
+    int index = maxIndex();
+    if (index == -1) {
+      return null;
+    }
+    return keys[index];
   }
 
 
-  /** The max value. */
+  /** The max value. (Or NaN if they're all NaN.) */
   public float maxValue() {
     checkMinMax("maxValue");
-    return values[maxIndex()];
+    int index = maxIndex();
+    if (index == -1) {
+      return Float.NaN;
+    }
+    return values[index];
   }
 
 
@@ -477,7 +493,7 @@ public class FloatDict {
       keys = PApplet.expand(keys);
       values = PApplet.expand(values);
     }
-    indices.put(what, new Integer(count));
+    indices.put(what, Integer.valueOf(count));
     keys[count] = what;
     values[count] = much;
     count++;
@@ -524,8 +540,8 @@ public class FloatDict {
     keys[b] = tkey;
     values[b] = tvalue;
 
-    indices.put(keys[a], new Integer(a));
-    indices.put(keys[b], new Integer(b));
+    indices.put(keys[a], Integer.valueOf(a));
+    indices.put(keys[b], Integer.valueOf(b));
   }
 
 
@@ -652,7 +668,28 @@ public class FloatDict {
     Sort s = new Sort() {
       @Override
       public int size() {
-        return count;
+        if (useKeys) {
+          return count;  // don't worry about NaN values
+
+        } else if (count == 0) {  // skip the NaN check, it'll AIOOBE
+          return 0;
+
+        } else {  // first move NaN values to the end of the list
+          int right = count - 1;
+          while (values[right] != values[right]) {
+            right--;
+            if (right == -1) {
+              return 0;  // all values are NaN
+            }
+          }
+          for (int i = right; i >= 0; --i) {
+            if (Float.isNaN(values[i])) {
+              swap(i, right);
+              --right;
+            }
+          }
+          return right + 1;
+        }
       }
 
       @Override
@@ -713,12 +750,11 @@ public class FloatDict {
   }
 
 
-//  /**
-//   * Write tab-delimited entries out to the console.
-//   */
-//  public void print() {
-//    write(new PrintWriter(System.out));
-//  }
+  public void print() {
+    for (int i = 0; i < size(); i++) {
+      System.out.println(keys[i] + " = " + values[i]);
+    }
+  }
 
 
   /**
